[package]
name = "chat-async"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-websockets = { version = "0.5", features = ["client", "server", "ring", "rand"] }
futures-util = { version = "0.3", features = ["sink"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
http = "1"
